--- a/frontend/src/css/products.css
+++ b/frontend/src/css/products.css
@@ -26,6 +26,7 @@
   max-height: 250px;
   width: 100%;
   height: auto;
+  object-fit: cover;
 }
 
 .product-box:hover {
